--- a/templates/kohrsupply/about.html
+++ b/templates/kohrsupply/about.html
@@ -7,7 +7,7 @@
     {{ content | safe }}
 
 <hr />
-edit or fork on <a href="https://github.com/klml/kohrsupply/blob/master/about/{{ request.path | cut:'/about/' | cut:'/' }}.md">github</a>
+edit or fork on <a href='https://github.com/klml/kohrsupply/blob/master/about/{% if request.path == "/about/" %}index{% else %}{{ request.path | cut:"/about/" | cut:"/" }}{% endif %}.md'>github</a>
 
 
 {% endblock %}
