--- a/templates/kohrsupply/transports_list.html
+++ b/templates/kohrsupply/transports_list.html
@@ -1,7 +1,7 @@
 <ul class="transportlist">
 {% for transport in transports %}
-    <li id="{{ transport.id }}" class="transport getfet_{{ transport.getfet }}" >
-        <a class="icon_{{transport.contentClass}}" href="{% url 'transport' pk=transport.pk %}">
+    <li id="{{ transport.id }}" class="transport getfet_{{ transport.getfet }} content_{{ transport.contentClass }}" >
+        <a href="{% url 'transport' pk=transport.pk %}">
         {% include "kohrsupply/transport_item.html" %}
         </a>
      </li>
