--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -29,7 +29,9 @@
         </span>
 
     {% else %}
-        <p class="right">Please <a href="{% url 'kohrsupply:login' %}">login</a> or <a href="{% url 'signup' %}">signup</a>.</p>
+
+
+        <p class="right"><a href="/about/mitmachen/">Howto join</a>? </a>Please <a href="{% url 'kohrsupply:login' %}">login</a> or <a href="{% url 'signup' %}">signup</a>.</p>
     {% endif %}
     </div>
     <br class="cb" />
