--- a/templates/kohrsupply/transports.html
+++ b/templates/kohrsupply/transports.html
@@ -8,7 +8,7 @@
 {% include "kohrsupply/transports_list.html" %}
 
 
-<a href="#" id="getlocal">get local</a>
+<a href="#" class="getlocal">get local</a>
 <a href="/?lat=48.13704&lon=11.57599&wide=17" id="">munich</a>
 
  <div id="mapid"></div>
