--- a/templates/kohrsupply/transports.html
+++ b/templates/kohrsupply/transports.html
@@ -9,7 +9,7 @@
 
 
 <a href="#" class="getlocal">get local</a>
-<a href="/?lat=48.13704&lon=11.57599&wide=17" id="">munich</a>
+<a href="/?lat=48.13704&lon=11.57599&wide=1&zoomout=1" id="">munich</a>
 
  <div id="mapid"></div>
 {% endblock %}
