--- a/templates/kohrsupply/transport_item.html
+++ b/templates/kohrsupply/transport_item.html
@@ -1,25 +1,29 @@
 
-    <div class="signet">
-    {% if  transport.active %}
-        {{ transport.contentClass }}
-    {% else %}
-        closed
-    {% endif %}
-    </div>
-    <div class="distance2target" title="aktueller Abstand zum Ziel">
-        {{ transport.distance2target }} km
+
+    <div class="signetdistance">
+        <div class="signet">
+        {% if  transport.active %}
+            {{ transport.contentClass }}
+        {% else %}
+            closed
+        {% endif %}
+        </div>
+        <div class="distance2target" title="aktueller Abstand zum Ziel">
+            {{ transport.distance2target }} km
+        </div>
     </div>
 
     <h2 class="holder carriergetfet_{{ transport.getfet }}" title="This transport is at">
     {% load l10n %}
-        {{ transport.currentLocation.locationname }}
+    <span>{{ transport.currentLocation.locationname }}</span>
 
     <em class="carrier" title="carrier is {{ transport.currentHolder }}, is currently {{ transport.getfet }} and has got {{ transport.currentHolderPoints.summa  }} points" >{{ transport.currentHolder }} ({{ transport.currentHolderPoints.summa }})</em>
     <span class="coords">{{ transport.currentLocation.geoLat | unlocalize }}, {{ transport.currentLocation.geoLon | unlocalize }}</span>
     </h2>
 
     <h2 class="recipient carriergetfet_{{ transport.recipientgetfet }}" title="This transport should get to">
-    {{ transport.recipientLocation.locationname }} <em class="carrier" title="recipient is {{ transport.recipient }}, is currently {{ transport.recipientgetfet }} and has got {{ transport.recipientPoints.summa  }} points"><small>{{ transport.recipientgetfet }}</small>{{ transport.recipient }} ({{ transport.recipientPoints.summa }})</em>
+    <span>{{ transport.recipientLocation.locationname }}</span>
+    <em class="carrier" title="recipient is {{ transport.recipient }}, is currently {{ transport.recipientgetfet }} and has got {{ transport.recipientPoints.summa  }} points"><small>{{ transport.recipientgetfet }}</small>{{ transport.recipient }} ({{ transport.recipientPoints.summa }})</em>
 
 
     <span class="coords ">{{ transport.recipientLocation.geoLat | unlocalize }}, {{ transport.recipientLocation.geoLon | unlocalize }}</span>
