--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -54,16 +54,23 @@ a.button {
 
 /* proportions and main style */
 #header {
-    text-align: right;
+    position: fixed;
+    background: #fff;
+    max-width: 950px; /* like wrapper */
+    width: 100%;
+    top: 0;
 }
-
-#navigation {
+#header #personal {
+    text-align: right;
+    padding-right: 25px;
+}
+#header #navigation {
     background-color: #f5f5f5 ;
     padding: 0 10px;
 }
 
 #content  {
-    margin-top: 15px;
+    margin-top: 10em;
 }
 #content form label {
   display:inline-block;
@@ -275,10 +282,12 @@ span.coords {
 
 
 @media only screen and (max-width: 959px) {
-    #logo {
-        width: 70px;
+    #logo img {
+        width: 85px;
     }
-
+    #content  {
+        margin-top: 7em;
+    }
     .holder span, .recipient span {
         min-width: 5em;
     }
