--- a/templates/kohrsupply/transport.html
+++ b/templates/kohrsupply/transport.html
@@ -39,8 +39,8 @@
     {% endif %}
 
     <hr class="cb" />
-    <h3>log</h3>
     <div class="log">
+    <h3>log ▾</h3>
     <ul id="log">
     {% for transportPass in transportPasses %}
         <li >{{transportPass.newcurrentHolder }} at {{transportPass.location}} <em class="coords" >{{transportPass.locationLat}}, {{transportPass.locationLon}}</em></li>
