--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -61,7 +61,7 @@ a.button {
     top: 0;
 }
 #header #personal {
-    text-align: right;
+    text-align: center;
     padding-right: 25px;
 }
 #header #navigation {
@@ -86,6 +86,14 @@ form#userstate input {
 
 #content form.post-form p {
     clear: both;
+}
+#header a.about {
+    color: #000;
+    line-height: 50px;
+    font-size: 120%;
+    padding: 5px 10px;
+    background: #c2e2d4;
+    text-decoration: none;
 }
 
 /* transport  */
