--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -35,7 +35,7 @@
         <br class="cb" />
         <div id="navigation">
             {% if user.is_authenticated %}
-            <a href="/transport/edit/" >new transport</a> |
+            <a href="/transport/edit/" accesskey="n" >new transport</a> |
             {% endif %}
             <a href="/locations" >all locations</a>
             {% if user.is_authenticated %}
