--- a/templates/kohrsupply/transport.html
+++ b/templates/kohrsupply/transport.html
@@ -24,7 +24,7 @@
     <br />
 
     {% if transport.author.id == user.id or transport.recipient.id == user.id or user.is_superuser %}
-    <a href="{% url 'transport_edit' pk=transport.pk %}">edit this transport</a>
+    <a href="{% url 'transport_edit' pk=transport.pk %}" accesskey="e" >edit this transport</a>
     {% endif %}
 
     {% if transport.recipient.id == user.id %}
