--- a/templates/kohrsupply/transport_edit.html
+++ b/templates/kohrsupply/transport_edit.html
@@ -4,6 +4,6 @@
     <h1>Edit Transport</h1>
     <form method="POST" class="post-form transport_{{transportid}}">{% csrf_token %}
         {{ form.as_p }}
-        <button id="savetrs" type="submit" class="save btn btn-default">Save</button>
+        <button id="savetrs" type="submit" class="save btn btn-default" accesskey="s" >Save</button>
     </form>
 {% endblock %}
