--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -11,7 +11,7 @@
 <body class="user_{{ user }}">
 
     <div id="header" class="cb">
-        <a href="/" id="logo" class="left" ><img src="//img.klml.de/devel/ptap/kohr_supply_logo__200.png" /></a>
+        <a href="/" id="logo" class="left" accesskey="1" ><img src="//img.klml.de/devel/ptap/kohr_supply_logo__200.png" /></a>
 
         <div id="personal">
         {% if user.is_authenticated %}
