--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -70,12 +70,11 @@
         </p>
     {% endblock %}
 
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 
-  <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/master/qrcode.min.js"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jqueryui@1.11.1/jquery-ui.min.css" integrity="sha256-orjEV2zLazjvpIqT0mVRAYVbewIvSmbv6s+l8tW9Xxg=" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/jqueryui@1.11.1,npm/leaflet@1.3.1,npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+
 <script>
 {% if user.is_authenticated %}
 var user = {
