--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -73,7 +73,10 @@
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jqueryui@1.11.1/jquery-ui.min.css" integrity="sha256-orjEV2zLazjvpIqT0mVRAYVbewIvSmbv6s+l8tW9Xxg=" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/jqueryui@1.11.1,npm/leaflet@1.3.1,npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/jqueryui@1.11.1,npm/leaflet@1.3.1,npm/leaflet-polylinedecorator@1.6.0,npm/qrcodejs@1.0.0/qrcode.js"></script>
+
 
 <script>
 {% if user.is_authenticated %}
