change current icon to content

--- a/templates/kohrsupply/transport_item.html
+++ b/templates/kohrsupply/transport_item.html
@@ -1,7 +1,7 @@
 
 
     <div class="signetdistance">
-        <div class="signet">
+        <div class="content signet">
         {% if  transport.active %}
             {{ transport.contentClass }}
         {% else %}
