there is no view transports

--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -61,7 +61,7 @@
     </div>
 
 <a href="/about" class="about" >about</a> | 
-<a href="/transports?all=all">all transport</a>
+<a href="/?all=all">all transport</a>
 
     {% block login %}
         <p class="right">
