--- a/templates/kohrsupply/location.html
+++ b/templates/kohrsupply/location.html
@@ -1,8 +1,6 @@
 {% extends "kohrsupply/base.html" %}
 
-
 {% block content %}
-
 
 <div class="location">
 
@@ -11,35 +9,30 @@
     {{ location.mail }}
     </h1>
 
-
     {% if user.is_authenticated %}
-    
-            <form method="POST" id="closetransport" class="">
+            <form method="POST" id="checkin" class="right">
             {% csrf_token %}
             <input name="checkin" value="{{ location.id }}" type="hidden" />
             <button id="savetrs" type="submit" class="save btn btn-default">checkin!</button>
         </form>
     {% endif %}
 
-    <br />
-    {{ location.street }} {{ location.streetnr }}
-    {{ location.zip }} {{ location.city }}
+    {{ location.street }} {{ location.streetnr }}<br />
+    {{ location.zip }} {{ location.city }}<br />
     {{ location.country }}
-    <br />
+
     {% load l10n %}
 
     <span class="coords">{{ location.geoLat | unlocalize }}, {{ location.geoLon | unlocalize }}</span>
     
     <br />
-    Created by {{ location.author }} at {{ location.lastused }}
+    <small>Created by {{ location.author }} at {{ location.lastused }}</small>
 
-
-    
     {% if user.is_authenticated %}
     {% endif %}
     <br />    
     {% if location.author.id == user.id %}
-    <a href="{% url 'location_edit' pk=location.pk %}">edit this location</a>
+    <a href="{% url 'location_edit' pk=location.pk %}" class="right">edit this location</a>
     {% endif %}
     
     <h2>transport current</h2>
@@ -68,14 +61,14 @@
     {% endfor  %}
     </ul>
     
-    <hr class="cb" />
     {% if location.author.id == user.id %}
-    <form method="POST">
+    <form method="POST" class="right">
         {% csrf_token %}
         <input name="delete" type="hidden" value="yes" />
         <button>delete</button>
     </form>
     {% endif %}
+    <hr class="cb" />
 
 </div>
 
