--- a/templates/kohrsupply/transport_item.html
+++ b/templates/kohrsupply/transport_item.html
@@ -1,5 +1,10 @@
 
 
+
+    <div class="contentDescription">
+    <div id="qrcodeurl" class="right" ></div>
+
+
     <div class="signetdistance">
         <div class="content signet">
         {% if  transport.active %}
@@ -17,7 +22,11 @@
     {% load l10n %}
     <span>{{ transport.currentLocation.locationname }}</span>
 
-    <em class="carrier" title="carrier is {{ transport.currentHolder }}, is currently {{ transport.getfet }} and has got {{ transport.currentHolderPoints.summa  }} points" >{{ transport.currentHolder }} ({{ transport.currentHolderPoints.summa }})</em>
+    <em class="carrier" title="carrier is {{ transport.currentHolder }}, is currently {{ transport.getfet }} and has got {{ transport.currentHolderPoints.summa  }} points" >{{ transport.currentHolder }} ({{ transport.currentHolderPoints.summa }})
+    {% if transport.currentHolder.id == user.id %}
+    <span class="yours" title="You have this transport">★</span>
+    {% endif %}
+    </em>
     <span class="coords">{{ transport.currentLocation.geoLat | unlocalize }}, {{ transport.currentLocation.geoLon | unlocalize }}</span>
     </h2>
 
@@ -29,11 +38,9 @@
     <span class="coords ">{{ transport.recipientLocation.geoLat | unlocalize }}, {{ transport.recipientLocation.geoLon | unlocalize }}</span>
     </h2>
 
-
-    <div class="contentDescription">
-    <div id="qrcodeurl" class="right" ></div>
     {{ transport.contentDescription }}
     </div>
 
     <span class="size" title="Größe">{{ transport.contentSize }}</span>
     <span class="weight" title="Gewicht">{{ transport.contentWeight }}</span>
+
